@@ -1,11 +1,11 @@
 /*
- * Copyright 2019-2021 the original author or authors.
+ * Copyright 2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.mattbertolini.spring.web.reactive.bind.resolver;
 
 import com.mattbertolini.spring.web.bind.annotation.FormParameter;
@@ -21,26 +20,25 @@ import com.mattbertolini.spring.web.bind.introspect.BindingProperty;
 import org.springframework.http.codec.multipart.FormFieldPart;
 import org.springframework.http.codec.multipart.Part;
 import org.springframework.lang.NonNull;
-import org.springframework.util.Assert;
 import org.springframework.util.StringUtils;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 public class FormParameterRequestPropertyResolver implements RequestPropertyResolver {
     @Override
-    public boolean supports(@NonNull BindingProperty bindingProperty) {
+    public boolean supports(BindingProperty bindingProperty) {
         FormParameter annotation = bindingProperty.getAnnotation(FormParameter.class);
         return annotation != null && StringUtils.hasText(annotation.value());
     }
 
     @NonNull
     @Override
-    public Mono<Object> resolve(@NonNull BindingProperty bindingProperty, @NonNull ServerWebExchange exchange) {
+    public Mono<Object> resolve(BindingProperty bindingProperty, ServerWebExchange exchange) {
         FormParameter annotation = bindingProperty.getAnnotation(FormParameter.class);
-        Assert.state(annotation != null, "No FormParameter annotation found on type");
+        Objects.requireNonNull(annotation, "No FormParameter annotation found on type");
         return exchange.getMultipartData()
             .filter(multipartData -> multipartData.getFirst(annotation.value()) != null)
             .map(multipartData -> multipartData.get(annotation.value()))
@@ -53,8 +51,8 @@ public class FormParameterRequestPropertyResolver implements RequestPropertyReso
     @NonNull
     private Object getPartValues(@NonNull List<Part> parts) {
         List<Object> values = parts.stream()
-            .map(value -> value instanceof FormFieldPart ? ((FormFieldPart) value).value() : value)
-            .collect(Collectors.toList());
+            .map(value -> value instanceof FormFieldPart formFieldPart ? formFieldPart.value() : value)
+            .toList();
         return values.size() == 1 ? values.get(0) : values;
     }
 }
